# TagStudio

./: .editorconfig  .envrc  .envrc.recommended  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.toml  404.html  Build_MacOS_app.sh  Build_win.bat  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  README.md  REUSE.toml  STYLE.md  TagStudio.sh  alembic.ini  app.vue  database_example.py  flake.nix  h origin date-sorting  index.html  initial_test_logs.txt  mkdocs.yml  mypy.ini  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  properdocs.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-prod.txt  requirements.txt  ruff.toml  sitemap.xml  start_win.bat  (+8 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-python/: action.yml
.github/workflows/: apprun.yaml  build.yml  build_docs.yml  checks_python.yml  docker-image-nightly.yaml  docker-image-release.yaml  mypy.yaml  publish_docs.yaml  pyright.yaml  pytest.yaml  release.yml  reuse.yaml  reuse.yml  ruff.yaml  runtest.yaml
LICENSES/: GPL-3.0-only.txt  GPL-3.0-or-later.txt  MIT.txt
assets/css/: base.css
changelog/: index.html
colors/: index.html
components/: Greet.vue
contrib/: .envrc-nix  .envrc-uv
contrib/packaging/: build_pyinstaller.py
contrib/packaging/linux/: build_appimage.sh  postinst.sh
contrib/packaging/macos/: build_dmg.sh
contrib/packaging/windows/: build_windows.ps1  tagstudio.nsi
contributing/: index.html
develop/: index.html
developing/: index.html
doc/: Database-Update.md  Entry.md  Field.md  Home.md  Library.md  Macro.md  Tag.md  documentation.md  index.md
doc/updates/: db_migration.md  planned_features.md
doc/utilities/: ffmpeg.md  get-started.md  macro.md
docker/: Dockerfile  docker-compose-nightly.yml  docker-compose.yml
docker/root/defaults/: autostart
docs/: CNAME  build-installers.md  build_installers.md  changelog.md  cli-refresh.md  colors.md  contributing.md  develop.md  developing.md  entries.md  fields.md  ignore.md  index.md  install.md  libraries.md  library-changes.md  library.md  library_changes.md  macros.md  preview-support.md  preview_support.md  relinking.md  roadmap.md  search.md  style.md  tags.md  usage.md
docs/help/: ffmpeg.md
docs/stylesheets/: extra.css  home.css
docs/updates/: changelog.md  db_migration.md  planned_features.md  roadmap.md  schema_changes.md
docs/utilities/: ignore.md  macro.md  relinking.md
entries/: index.html
fields/: index.html
help/ffmpeg/: index.html
ignore/: index.html
install/: index.html
libraries/: index.html
library-changes/: index.html
macros/: index.html
nix/: shell.nix
nix/package/: default.nix  pillow-jxl-plugin.nix  pyexiv2.nix  shiboken6-fix-include-qt-headers.patch  vtf2img.nix
overrides/partials/: header.html  nav.html  toc-item.html
pages/: index.vue
presets/lara/autocomplete/: index.js
presets/lara/badge/: index.js
presets/lara/badgedirective/: index.js
presets/lara/button/: index.js
presets/lara/calendar/: index.js
presets/lara/carousel/: index.js
presets/lara/cascadeselect/: index.js
presets/lara/checkbox/: index.js
presets/lara/chips/: index.js
presets/lara/colorpicker/: index.js
presets/lara/confirmpopup/: index.js
presets/lara/contextmenu/: index.js
presets/lara/datatable/: index.js
presets/lara/dataviewlayoutoptions/: index.js
presets/lara/dropdown/: index.js
presets/lara/fileupload/: index.js
presets/lara/inputmask/: index.js
presets/lara/inputnumber/: index.js
presets/lara/inputotp/: index.js
presets/lara/inputswitch/: index.js
presets/lara/inputtext/: index.js
presets/lara/knob/: index.js
presets/lara/listbox/: index.js
presets/wind/: global.js
preview-support/: index.html
project.inlang/: project_id  settings.json
roadmap/: index.html
scripts/: semver-segments.pl  tagstudio.spec
search/: index.html  search_index.json
setup/: GPL-3.0.txt  req.txt  setup.py
setup/data/: pyport.txt
src/: app.html  hooks.ts
src-tauri/: .eslintignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: Greet.svelte  Sidebar.svelte  i18n.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte  Sidebar.svelte
src/tagstudio/: __main__.py  main.py
style/: index.html
stylesheets/: extra.css  home.css
tags/: index.html
tagstudio/: __init__.py  args.py  logger.py  parse_args.py  tag_studio.py  tagstudio.py
tagstudio/resources/: icon.icns
tagstudio/tests/: conftest.py  example_settings.toml  main.py  test_db_migrations.py  test_driver.py  test_filter_state.py  test_folders_tags.py  test_json_migration.py  test_library.py  test_query_tokenizer.py  test_search.py  test_settings.py  test_translations.py
tests/: conftest.py  test_cli_refresh.py  test_db_migrations.py  test_driver.py  test_json_migration.py  test_library.py  test_numeric_logic.py  test_rating_logic.py  test_search.py  test_silent_subprocess.py  test_translations.py
tests/fixtures/: sample.ods  sample.odt  sidecar_newgrounds.json
tests/macros/: test_dupe_entries.py  test_dupe_files.py  test_folders_tags.py  test_missing_files.py  test_paths_to_fields.py  test_refresh_dir.py  test_sidecar.py
tests/qt/: test_about_modal.py  test_build_tag_panel.py  test_drop_import_modal.py  test_field_containers.py  test_file_path_options.py  test_flow_widget.py  test_folders_to_tags.py  test_global_settings.py  test_item_thumb.py  test_mirror_entries_modal.py  test_preview_panel.py  test_qt_driver.py  test_renderer_caps.py  test_resource_manager.py  test_tag_panel.py  test_tag_search_panel.py  test_theme_system.py  test_thumb_renderer.py  test_translated_ui_labels.py
ts-nuxt/: package-lock.json  package.json
updates/changelog/: index.html
updates/db_migration/: index.html
updates/planned_features/: index.html
updates/roadmap/: index.html
updates/schema_changes/: index.html
usage/: index.html
utilities/ignore/: index.html
utilities/macro/: index.html
(+738 files in other folders)
